<resources>
    <string name="app_name">爱学学</string>
    <string name="back_text">返回</string>
    <string name="login">登录</string>
    <string name="Tips">Tips</string>
    <string name="contact">内容</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="正在加载">正在加载...</string>
    <string name="world">世界</string>
    <string name="just_delete_friend">您已被对方移除好友</string>
    <string name="just_remove_group">您已被移除该群组!</string>
    <string name="all_members">全体成员</string>
    <string name="manager_is_open_no_talk">管理员%1$s开启了%2$s群的禁言</string>
    <string name="at_your_in_group">%s在群聊中@了你</string>
    <string name="sent_a_message">发来一条消息</string>
    <string name="sent_a_picture">发来一张图片</string>
    <string name="sent_a_voice">发来一段语音</string>
    <string name="sent_a_location">发来位置信息</string>
    <string name="sent_a_video">发来一个视频</string>
    <string name="sent_a_file">发来一个文件</string>
    <string name="contacts_messages">%1$s个联系人发来%2$i条消息</string>
    <string name="zhongkuohao">[</string>
    <string name="zhongkuohao_msg">条]</string>
    <string name="Account_does_not_exist">账号不存在</string>
    <string name="Incorrect_password">密码不正确</string>
    <string name="Account_has_been_disabled">账号已被禁用</string>
    <string name="Server_busy">服务器繁忙请重试...</string>
    <string name="Logoff_notification">下线通知</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="revoke_content">你撤回了一条消息</string>
    <string name="revoke_content_someone">%s撤回了一条消息</string>
    <string name="forward">转发</string>
    <string name="reback">撤回</string>
    <string name="really_copy_and_send">确定复制并发送这条消息吗?</string>
    <string name="rebacking">正在撤回...</string>
    <string name="reback_failed">撤回失败!</string>
    <string name="reback_not_more_than_30">超过半小时的消息不支持撤回!</string>
    <string name="copy_success">复制成功!</string>
    <string name="copy_failed">复制失败!</string>
    <string name="just_15">15分钟前</string>
    <string name="just_30">30分钟前</string>
    <string name="just_1hour">1小时前</string>
    <string name="Days_ago">天前</string>
    <string name="long_long_ago">很久以前</string>
    <string name="An_hour_ago">小时前</string>
    <string name="minutes_ago">分钟前</string>
    <string name="just">刚刚</string>
    <string name="register_agrement"><u>爱学学注册协议</u></string>
    <string name="follow_tch">关注的老师</string>
    <string name="follow_people">关注的人</string>
    <string name="follow_cancel">取消关注</string>
    <string name="follow_organ">关注的机构</string>
    <string name="user_collect">我的收藏</string>
    <string name="group_chat">我的群聊</string>
    <string name="create_success">创建成功</string>
    <string name="you_change_group_info">你 修改了群资料</string>
    <string name="change_group_info">修改了群资料</string>
    <string name="join_the_group">加入了群聊</string>
    <string name="remove_group">被移除群聊</string>
    <string name="promotion_msg">[活动消息]</string>
    <string name="revoke_one_msg">%s撤回了一条消息</string>
    <string name="you">你</string>
    <string name="the_current_network">当前网络不可用，请检查网络设置</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="address_book">通讯录</string>
    <string name="attach_video">视频</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="attach_file">文件</string>
    <string name="sd_card_does_not_exist">SD卡不存在，不能拍照</string>
    <string name="unable_to_get_loaction">无法获取到您的位置信息!</string>
    <string name="home_notice_receive">快来领取吧!</string>
    <string name="home_notice">通知</string>
    <string name="user_coupon">优惠券</string>
    <string name="user_order">我的订单</string>
    <string name="user_privacy">隐私设置</string>
    <string name="user_modify_pwd">修改密码</string>
    <string name="user_cache_clear">清除缓存</string>
    <string name="user_about">关于爱学学</string>
    <string name="user_setting">设置</string>
    <string name="user_friends_circle">不让他（她）看我的朋友圈</string>
    <string name="user_neither_friends">不看他（她）的朋友圈</string>
    <string name="user_allow_position">允许地图上显示我</string>
    <string name="search">搜索</string>
    <string name="search_header">搜</string>
    <string name="new_friend">我的朋友</string>
    <string name="live">直播</string>
    <string name="watch_live">开始直播</string>
    <string name="more_people">%s个联系人</string>
    <string name="news_report">新闻资讯</string>
    <string name="news_dt">新闻详情</string>
    <string name="Failed_to_download_file">下载文件失败:</string>
    <string name="loading">正在加载....</string>
    <string name="recording_video">录制视频</string>
    <string name="The_video_to_start">录像开始</string>
    <string name="Whether_to_send">是否发送？</string>
    <string name="prompt">提示</string>
    <string name="Open_the_equipment_failure">打开设备失败!</string>
    <string name="not_more_msg">暂无更多消息!</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="File_does_not_exist">文件不存在</string>
    <string name="The_file_is_not_greater_than_10_m">文件不能大于10M</string>
    <string name="Send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
    <string name="Recording_without_permission">无录音权限</string>
    <string name="The_recording_time_is_too_short">录音时间太短</string>
    <string name="send_failure_please">发送失败，请检测服务器是否连接</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="Remaining_seconds">剩余%s秒</string>
    <string name="small_video">小视频</string>
    <string name="record_failed">录制失败</string>
    <string name="Make_sure_that_the_short_video_is_used">确定使用该小视频?</string>
    <string name="file">文件</string>
    <string name="no_pression">没有权限!</string>
    <string name="organ">机构列表</string>
    <string name="user_sys_notice">系统消息</string>
    <string name="user_sys_notice_detail">详情</string>
    <string name="discount_act">优惠活动</string>
    <string name="can_not_connect_chat_server_connection">连接不到聊天服务器</string>
    <string name="were_mentioned">[有人@我]</string>
    <string name="delete">删除</string>
    <string name="deleting">正在删除...</string>
    <string name="delete_sucess">删除成功</string>
    <string name="Delete_failed">删除失败</string>
    <string name="new_friend1">新的朋友</string>
    <string name="add_friend">添加好友</string>
    <string name="secret_signal_or_phone_number">ID/手机号</string>
    <string name="me_qrcode">我的二维码</string>
    <string name="request_add_friend">请求加为好友</string>
    <string name="add_friend_success">同意好友成功！</string>
    <string name="add_friend_failed">同意好友失败</string>
    <string name="already_rejected">已拒绝你的好友申请</string>
    <string name="Reasons">申请理由：</string>
    <string name="Already_added">已添加</string>
    <string name="accept">接受</string>
    <string name="Has_agreed_to_your_friend_request">已同意你的好友请求</string>
    <string name="Request_to_add_you_as_a_friend">请求加你为好友</string>
    <string name="str_agree">同意</string>
    <string name="str_refused">拒绝</string>
    <string name="Refused">已拒绝</string>
    <string name="has_rejected">被拒绝</string>
    <string name="Are_agree_with">正在同意...</string>
    <string name="are_finding_contact">正在查找...</string>
    <string name="User_does_not_exis">用户不存在</string>
    <string name="server_is_busy_try_again"> 服务器繁忙请重试...</string>
    <string name="send_meassage">发送消息</string>
    <string name="now_refresh_msg">正在加载...</string>
    <string name="pass_or_no_by_send">你需要发送验证申请，等对方通过</string>
    <string name="i_am">我是</string>
    <string name="Is_sending_a_request">正在发送...</string>
    <string name="send_successful">发送请求成功,等待对方验证</string>
    <string name="Request_add_buddy_failure">请求添加好友失败!</string>
    <string name="filter_near">附近</string>
    <string name="filter_sort">智能排序</string>
    <string name="filter_language">语言培训</string>
    <string name="user_info">个人信息</string>
    <string name="user_avatar">头像</string>
    <string name="user_nickname">昵称</string>
    <string name="user_phone">手机号</string>
    <string name="user_wxcode">微信号</string>
    <string name="user_scancode">我的二维码</string>
    <string name="more_function">更多</string>
    <string name="user_modify_nickname">修改昵称</string>
    <string name="user_more">更多</string>
    <string name="user_sign">个性签名</string>
    <string name="user_area">地区</string>
    <string name="user_sex">性别</string>
    <string name="take_camera">拍照</string>
    <string name="take_photo">从手机相册选择</string>
    <string name="user_scan">扫描二维码</string>
    <string name="msg_camera_framework_bug">相机被占用或没有相机权限，请检查</string>
    <string name="button_ok">退出</string>
    <string name="hint_scan">将二维码至于此区域，并对齐扫描框边缘</string>
    <string name="my_friends">我的好友</string>
    <string name="resuse_failed">拒绝失败</string>
    <string name="user_logout">退出登录</string>
    <string name="user_feedback">意见反馈</string>
    <string name="world_circle">发现</string>
    <string name="world_publish">创建</string>
    <string name="world_image">图片</string>
    <string name="image_select">所有照片</string>

    <string name="mis_tip_take_photo">拍摄照片</string>
    <string name="mis_folder_all">所有照片</string>
    <string name="mis_preview">预览</string>
    <string name="mis_msg_no_camera">没有系统相机</string>
    <string name="mis_msg_amount_limit">已经达到最高选择数量</string>
    <string name="mis_action_done">确定</string>
    <string name="mis_error_no_permission">无权限</string>
    <string name="mis_photo_unit">张</string>
    <string name="mis_action_button_string">%1$s(%2$d/%3$d)</string>
    <string name="mis_error_image_not_exist">图片错误</string>
    <string name="mis_permission_dialog_title">权限拒绝</string>
    <string name="mis_permission_dialog_ok">好</string>
    <string name="mis_permission_dialog_cancel">拒绝</string>
    <string name="mis_permission_rationale">浏览图片需要您提供浏览存储的权限</string>
    <string name="mis_permission_rationale_write_storage">保存拍照图片需要您提供写存储权限</string>
    <string name="world_display">不显示</string>
    <string name="world_local">所选位置</string>
    <string name="world_publish_hint">说点什么吧!</string>
    <string name="public_group">公开群</string>
    <string name="private_group">私密群</string>
    <string name="free_group">付费群</string>
    <string name="registing">正在注册...</string>
    <string name="exting_group_success">退出成功</string>
    <string name="exting_group_failed">退出失败</string>
    <string name="check_friend">请选择好友</string>
    <string name="joining_group">正在加入群聊</string>
    <string name="joining_group_success">加入群聊成功</string>
    <string name="joining_group_failed">加入群聊失败</string>
    <string name="group_groupname_dot_18">群名称不能超过18个字符</string>
    <string name="are_uploading">正在更新...</string>
    <string name="Modify_the_group_name_successful">修改群名称成功</string>
    <string name="change_groupName_failed">更新群名称失败!</string>
    <string name="update_success">更新成功</string>
    <string name="update_groups_failed">更新失败</string>
    <string name="home_notice_dt">详情</string>
    <string name="organ_search">搜索</string>
</resources>
