<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/id_pop_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#F0F0F1"
        android:divider="@drawable/drawable_line"
        android:orientation="vertical"
        android:showDividers="beginning|middle"
        android:weightSum="3">

        <TextView
            android:id="@+id/tvCamera"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:padding="@dimen/dp_15"
            android:text="@string/take_camera"
            android:textColor="#333333"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tvPhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:padding="@dimen/dp_15"
            android:text="@string/take_photo"
            android:textColor="#333333"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/white"
            android:gravity="center"
            android:padding="@dimen/dp_15"
            android:text="@string/cancel"
            android:textColor="#333333"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>


</RelativeLayout>