<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/id_pop_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#F0F0F1"
        android:divider="@drawable/drawable_line"
        android:orientation="vertical"
        android:weightSum="3">

        <TextView
            android:id="@+id/tv_popup_publicgroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:padding="@dimen/dp_15"
            android:text="@string/public_group"
            android:textColor="#333333"
            android:textSize="@dimen/sp_14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="15dp"
            android:background="#ffe5e5e5" />

        <TextView
            android:id="@+id/tv_popup_privategroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:padding="@dimen/dp_15"
            android:text="@string/private_group"
            android:textColor="#333333"
            android:textSize="@dimen/sp_14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="15dp"
            android:background="#ffe5e5e5" />

        <TextView
            android:id="@+id/tv_popup_freegroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:padding="@dimen/dp_15"
            android:text="@string/free_group"
            android:textColor="#333333"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>


</RelativeLayout>