<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/activity_header" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:divider="@drawable/drawable_line"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_16"
        android:showDividers="middle|end">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingRight="@dimen/dp_16">

            <TextView
                android:id="@+id/tvPrivacy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="@dimen/dp_15"
                android:paddingLeft="@dimen/dp_10"
                android:paddingTop="@dimen/dp_15"
                android:text="@string/user_privacy" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_arrow_right" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingRight="@dimen/dp_16">

            <TextView
                android:id="@+id/tv_setting_changepass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="@dimen/dp_15"
                android:paddingLeft="@dimen/dp_10"
                android:paddingTop="@dimen/dp_15"
                android:text="@string/user_modify_pwd" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_arrow_right" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingRight="@dimen/dp_16">

            <TextView
                android:id="@+id/tv_setting_about"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="@dimen/dp_15"
                android:paddingLeft="@dimen/dp_10"
                android:paddingTop="@dimen/dp_15"
                android:text="@string/user_about" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_arrow_right" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/dp_15"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="15dp"
            android:paddingTop="@dimen/dp_15">

            <TextView
                android:id="@+id/tv_setting_clearcache"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_cache_clear" />

            <TextView
                android:id="@+id/tv_setting_cachesize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textcolor1"
                android:textSize="13sp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnLogout"
        style="?android:borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_suggestion_btn"
        android:minHeight="45dp"
        android:text="@string/user_logout"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14" />
</LinearLayout>