<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/activity_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/white"
        android:divider="@drawable/drawable_line"
        android:orientation="vertical"
        android:showDividers="beginning|middle|end">

        <LinearLayout
            android:id="@+id/llContainer"
            style="@style/user_info_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="false"
                android:lines="1"
                android:text="@string/user_avatar" />

            <ImageView
                android:id="@+id/ivAvatar"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:focusable="false"
                android:scaleType="centerCrop"
                android:src="@drawable/default_avatar" />
        </LinearLayout>

        <LinearLayout
            android:id="@id/llNickname"
            style="@style/user_info_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="false"
                android:lines="1"
                android:text="@string/user_nickname" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:drawableRight="@mipmap/ic_arrow_right"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:lines="1" />
        </LinearLayout>

        <LinearLayout
            style="@style/user_info_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lines="1"
                android:text="@string/user_phone" />

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:lines="1" />
        </LinearLayout>

        <LinearLayout
            style="@style/user_info_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lines="1"
                android:text="@string/user_wxcode" />

            <TextView
                android:id="@+id/tvWX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:lines="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llCode"
            style="@style/user_info_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="false"
                android:lines="1"
                android:text="@string/user_scancode" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:src="@mipmap/ic_user_scancode" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:drawableRight="@mipmap/ic_arrow_right"
                android:ellipsize="end"
                android:focusable="false"
                android:gravity="center_vertical"
                android:lines="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMore"
            style="@style/user_info_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableRight="@mipmap/ic_arrow_right"
                android:lines="1"
                android:text="@string/more_function" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>