<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_item_add"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="1dp"
        android:background="@color/white">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_avatar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/default_avatar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="5dp"
            android:layout_toLeftOf="@+id/ll_button"
            android:layout_toRightOf="@+id/iv_avatar"
            android:gravity="center|left"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left|bottom"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:gravity="center|left|bottom"
                android:maxLines="1"
                android:textColor="#353535"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_reason"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center|left|top"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center|left|top"
                android:maxLines="2"
                android:text="@string/request_add_friend"
                android:textColor="#aaaaaa"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_added"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="@string/Already_added"
                android:textColor="#AAAAAA"
                android:textSize="12sp" />


        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_add"
            style="?android:borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="11dp"
            android:layout_marginTop="19dp"
            android:layout_weight="1"
            android:background="@drawable/login_btn_round_bg"
            android:text="@string/str_agree"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />

        <Button
            android:id="@+id/btn_refuse"
            style="?android:borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="19dp"
            android:layout_weight="1"
            android:background="@drawable/login_btn_round_bg_white"
            android:text="@string/str_refused"
            android:textColor="#333333"
            android:textSize="@dimen/sp_12" />
    </LinearLayout>


</LinearLayout>